# make-flask

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  setup.cfg  setup.py
make_flask/: cli.py
