[metadata]
name = make-flask
version = 1.0.0
author = Lord J. Hackwell
author_email = lordhck@niton.dev
description = a cli tool for creating flask apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/nitondev/make-flask
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    make-flask = make_flask.cli:main
